2006-05-05 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/noding/SegmentString.h,
	source/headers/geos/noding/SegmentString.inl,
	source/noding/SegmentNodeList.cpp: SegmentString::getContext()
	dropped, new name is getData() to reflect change in JTS
	* source/headers/geos/geom.h: fixed namespace
	qualification in doxygen page about C++ interface.

2006-05-04 Sandro Santilli <strk@refractions.net>

        * source/geom/GeometryCollection.cpp, source/geom/LineString.cpp,
        source/geom/MultiLineString.cpp, source/geom/MultiPoint.cpp,
        source/geom/MultiPolygon.cpp, source/geom/Point.cpp,
        source/geom/Polygon.cpp, source/headers/geos/geom/Dimension.h,
        source/headers/geos/geom/Geometry.h,
        source/headers/geos/geom/GeometryCollection.h,
        source/headers/geos/geom/LineString.h,
        source/headers/geos/geom/MultiLineString.h,
        source/headers/geos/geom/MultiPoint.h,
        source/headers/geos/geom/MultiPolygon.h,
        source/headers/geos/geom/Point.h,
        source/headers/geos/geom/Polygon.h,
        source/operation/buffer/BufferOp.cpp: updated all
	Geometry::getDimension() methods to return
	Dimension::DimensionType (closes bug#93)
	* source/headers/geos/util/math.h: provided an util::round()
	method being an inline proxy to call appropriate default
	rounding function for the whole GEOS codebase. Currently
	pointing at util::java_math_round() being the last being
	used. All users updated.
	* source/headers/geos/geomgraph/NodeMap.h: added invariant
	tester, fixed comment about ownership of NodeFactory.
	* source/headers/geos/operation/buffer/OffsetCurveSetBuilder.h:
	doxygen comments.
	* headers/geos/geom/CoordinateSequence.h: added
	comment about the toVector() method.
	* source/noding/SegmentNodeList.cpp: cleanups,
	changed output operator to be more similar to JTS
	* source/noding/ScaledNoder.cpp: removed use
	of SegmentString::setCoordinates().
	* source/headers/geos/noding/SegmentStrign.{h,inl}: